--- a/index.html
+++ b/index.html
@@ -43,72 +43,72 @@
 
     <img src="1 (1).jpg" height="400px" width="400px">
     <br>
-    <p>Our holiday where I had the best time even though I got up at 6 am. <br>
+    <p>Our holiday where I had the best time even though I got up at 6 am. 
         Put towels out for us not to use them. Ahah, I'm just kidding. I had the best time.</p>
     <br>
     <source src="1 (1).mp4" type="video/mp4" autoplay height="300px" width="300px">
     <img src="1 (2).jpg" height="400px" width="300px">
     <br>
-    <p>The surprise I got after work doing bowling and <br>
+    <p>The surprise I got after work doing bowling and 
         karaoke which I was real M and M</p>
     <br>
     <img src="1 (3).jpg" height="400px" width="300px">
     <br>
-    <p>One of the first pictures we have together, one of the <br>
-        first times around your house with your welcoming parents <br>
-        and you, the best host ever in those PJs. I love the place and love <br>
+    <p>One of the first pictures we have together, one of the 
+        first times around your house with your welcoming parents 
+        and you, the best host ever in those PJs. I love the place and love 
         to be with you.</p>
     <br>
     <img src="1 (4).jpg" height="450px" width="300px">
     <br>
-    <p>Oh, our holiday again, how amazing it was. 4 sleepovers could never have imagined, <br>
+    <p>Oh, our holiday again, how amazing it was. 4 sleepovers could never have imagined, 
         your parents saying yes. It was the best, and I had the best time ever with you. I love you so much.</p>
     <br>
     <img src="1 (5).jpg" height="400px" width="300px">
     <br>
-    <p>Our night out in Manchester or Manny as you like to call it. <br>
-        Even though I'm sorry, I was a scary boy and wanted to go home in bed <br>
-        and be in PJs with you instead of drinking after a little. <br>
-        It doesn't matter what we do, even if it's watching paint dry, <br>
+    <p>Our night out in Manchester or Manny as you like to call it. 
+        Even though I'm sorry, I was a scary boy and wanted to go home in bed 
+        and be in PJs with you instead of drinking after a little. 
+        It doesn't matter what we do, even if it's watching paint dry, 
         I would do that with you. I love you so much, to the moon and back. 143.</p>
     <br>
     <img src="1 (6).jpg" height="300px" width="400px">
     <br>
-    <p>IDK if you know this one, but maybe you do. It's the photo <br>
-        taken when I asked you out that night. It's the start when <br>
-        you had the coronation, and I was still too scared to go houses. <br>
-        Well, we both were, and you came out. I was cleaning my car. Ahah, <br>
-        way to be awkward, but still, it's such a special photo because it shows <br>
-        the day I asked you out, even though you threw up on my car. Ahah, <br>
-        I still loved you and knew I did and wanted to marry you so badly, <br>
+    <p>IDK if you know this one, but maybe you do. It's the photo 
+        taken when I asked you out that night. It's the start when 
+        you had the coronation, and I was still too scared to go houses. 
+        Well, we both were, and you came out. I was cleaning my car. Ahah, 
+        way to be awkward, but still, it's such a special photo because it shows 
+        the day I asked you out, even though you threw up on my car. Ahah, 
+        I still loved you and knew I did and wanted to marry you so badly, 
         and still do if you ever give me the chance.</p>
     <br>
     <img src="1 (7).jpg" height="400px" width="300px">
     <br>
-    <p>MY FAV PHOTO, well maybe the one you playing FIFA and the <br>
-        one below are some of my fav, but this one OMG the end tho. <br>
-        One of last nights of our holiday:(( where we missed <br>
-        our bus, my fault having a poo, sorry, and then nearly missed <br>
+    <p>MY FAV PHOTO, well maybe the one you playing FIFA and the 
+        one below are some of my fav, but this one OMG the end tho. 
+        One of last nights of our holiday:(( where we missed 
+        our bus, my fault having a poo, sorry, and then nearly missed 
         our plane again, my fault, sorry.</p>
     <br>
     <img src="1 (8).jpg" height="400px" width="300px">
     <br>
-    <p>Ella May Roberts, hopefully one day Ella May Sharpe or idm <br>
-        being Frank Alexander Roberts if u want idm as long as I marry <br>
-        you. Now I thought of this a lot ever since we started dating. <br>
-        Just like I know I like blue on you, black is your fav colour. <br>
-        You have blue eyes, you have blond hair, you have braces, <br>
-        you have Rosie, your fav person. You have the best smile and laugh, <br>
-        you are so funny yet I won't admit it, you are so smart. <br>
-        You have this way to make me feel like it was okay when <br>
-        I was even in 2k of debt. You have compassion for people, <br>
-        when me, myself, wouldn't. You love dogs, you want a cat, rabbit, <br>
-        horse for our house with the blue and copper and black taps <br>
-        bathroom and kitchen. Mum even said about how planned out we are, <br>
-        you want a Porsche GTRS 3 in pink, and I promise I'll get you one, <br>
-        even if you have moved on, even if it meant selling everything I have. <br>
-        I love you; I said it first to you, and I meant it. And when you <br>
-        said 143 to me back, OMG, my heart raced, and I was the happiest person <br>
+    <p>Ella May Roberts, hopefully one day Ella May Sharpe or idm 
+        being Frank Alexander Roberts if u want idm as long as I marry 
+        you. Now I thought of this a lot ever since we started dating. 
+        Just like I know I like blue on you, black is your fav colour. 
+        You have blue eyes, you have blond hair, you have braces, 
+        you have Rosie, your fav person. You have the best smile and laugh, 
+        you are so funny yet I won't admit it, you are so smart. 
+        You have this way to make me feel like it was okay when 
+        I was even in 2k of debt. You have compassion for people, 
+        when me, myself, wouldn't. You love dogs, you want a cat, rabbit, 
+        horse for our house with the blue and copper and black taps 
+        bathroom and kitchen. Mum even said about how planned out we are, 
+        you want a Porsche GTRS 3 in pink, and I promise I'll get you one, 
+        even if you have moved on, even if it meant selling everything I have. 
+        I love you; I said it first to you, and I meant it. And when you 
+        said 143 to me back, OMG, my heart raced, and I was the happiest person 
         you could be, and I still am because I'm still with you or hope <br>
         to be if you would please forgive me. <br><br>I'm sorry.</p>
     <br>
@@ -118,58 +118,58 @@
     <br>
     <img src="1 (10).jpg" height="300px" width="400px">
     <br>
-    <p>This one is a very cute one of you hugging me in Angle Bay. <br>
-        That guy on the bike was there though at the end being weird, and <br>
-        me trying to climb, and you telling me off. Ahah, jk, it was cute. <br>
+    <p>This one is a very cute one of you hugging me in Angle Bay. 
+        That guy on the bike was there though at the end being weird, and 
+        me trying to climb, and you telling me off. Ahah, jk, it was cute. 
         I'm glad you think of my safety; I love you so much.</p>
     <br>
     <img src="1 (11).jpg" height="300px" width="400px">
     <br>
-    <p>Ella doing her photography with the phone I just got myself, <br>
-        which I defo didn't copy, I did. I did it because u wanted me to, <br>
+    <p>Ella doing her photography with the phone I just got myself, 
+        which I defo didn't copy, I did. I did it because u wanted me to, 
         now we can be matching everything. Maybe I should get a scarf.</p>
     <br>
     <img src="1 (12).jpg" height="300px" width="400px">
     <br>
-    <p>AW, Ella and Dottie playing on the beach after dinner with my family. <br>
-        I love that my family love you, and they do a lot, and I love <br>
+    <p>AW, Ella and Dottie playing on the beach after dinner with my family. 
+        I love that my family love you, and they do a lot, and I love 
         and hope your family love me because I love them so much.</p>
     <br>
     <img src="1 (13).jpg" height="400px" width="300px">
     <br>
-    <p>MY FAV PHOTO again, I know, sorry, but this one, my two fav things. <br>
-        After that went ice skating, which is the best with you. <br>
+    <p>MY FAV PHOTO again, I know, sorry, but this one, my two fav things. 
+        After that went ice skating, which is the best with you. 
         <br>I love you so much; I just want you to love me again. I'm sorry.</p>
     <br>
     <img src="1 (14).jpg" height="400px" width="300px">
     <br>
-    <p>Recent photo day you got the Porsche jumper which I love. <br>
-        I love it so much; you make everything look great. You're so perfect <br>
+    <p>Recent photo day you got the Porsche jumper which I love. 
+        I love it so much; you make everything look great. You're so perfect 
         and pretty.</p>
     <br>
     <img src="1 (15).jpg" height="400px" width="300px">
     <br>
-    <p>One of our first photos together; this one is so cute. <br>
-        My hands awkward though, but I'm still scared. <br>
-        I think of being in <Br>
-        your house; I am a bit more comfortable now, but then, OMG, it was <br>
-        scary; every noise was scary. Ahah, but I love it now just like <br>
+    <p>One of our first photos together; this one is so cute. 
+        My hands awkward though, but I'm still scared. 
+        I think of being in 
+        your house; I am a bit more comfortable now, but then, OMG, it was 
+        scary; every noise was scary. Ahah, but I love it now just like 
         <br>I love you.</p>
     <Br>
     <img src="1 (16).jpg" height="400px" width="300px">
     <br>
-    <p>The day we went and got all the clothes at Trafford, <br>
-        I went and got my coat which you picked because I care <Br>
+    <p>The day we went and got all the clothes at Trafford, 
+        I went and got my coat which you picked because I care 
         only about if you think it's nice because I love you so much.</p>
     <br>
 
-    <h1>I Love You Ella May Roberts, You Are the Love of My Life 143<br>
-        I have never stopped loving you at all, and that's the truth<br>
-        even if you did want to move on I couldn't and still would always<br>
-        love you. I really don't want us to end; I want to do anything I can<br>
-        to fix it. Please don't cut me out; I want to make it right. I'm<br>
-        sorry; please just tell me what I can do, and I'll do anything.<br>
-        I'll die if I can't have you. I love you so much to the moon and back.<br>
+    <h1>I Love You Ella May Roberts, You Are the Love of My Life 143
+        I have never stopped loving you at all, and that's the truth
+        even if you did want to move on I couldn't and still would always
+        love you. I really don't want us to end; I want to do anything I can
+        to fix it. Please don't cut me out; I want to make it right. I'm
+        sorry; please just tell me what I can do, and I'll do anything.
+        I'll die if I can't have you. I love you so much to the moon and back.
         <br>
         To<br> My Ella
         <br>
