--- a/index.html
+++ b/index.html
@@ -172,6 +172,13 @@
         I'll die if I can't have you. I love you so much to the moon and back.
         <br>
         To<br> My Ella
+        My otter<br>
+        My git<br>
+        My slag<br>
+        My wife<br>
+        My life<Br>
+        My other half<br>
+        MY GIRLFREIND<Br>
         <br>
         (One day hopefully Mrs. Sharpe)</h1>
 </body>
