--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 20px;
             text-align: center;
-            background-color: #f7f7f7;
+            background-color: #82dff8;
         }
 
         h1, h2, h4 {
@@ -252,7 +252,7 @@
 
 <div id="box" onclick="moveNo()" align="center">
     Will you go out with me?<br>
-    <button id="yes" onclick="alert('Great!')">Yes</button>
+    <button id="yes" onclick="alert('Great! Thank you Mrs Sharpe')">Yes</button>
     <button id="no" onclick="moveNo()">No</button>
 </div>
 
