--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
         #box {
             width: 300px;
             height: 150px;
-            background-color: #3498db;
-            color: #ffffff;
+            background-color: #ffffff;
+            color: #000000;
             padding: 20px;
             border-radius: 10px;
             cursor: pointer;
-            position: relative;
+            position: absolute;
+            left: 125px;
         }
 
         #yes, #no {
